cuda_base/src/cublaslt_internal.rs

extern "system" {
    pub fn cublasLtTSTMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtTSTMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtTSTMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtTSTMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtTSTMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtTSTMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCCMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtVCCMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCCMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCCMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCCMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCCMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCVMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtVCVMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCVMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCVMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCVMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtVCVMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLt_for_cublas_BII() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_BSS() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_CCC() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_DDD() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_HHH() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_HSH() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_HSS() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_SSS() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_TSS() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_TST() -> *mut ::core::ffi::c_void;
}
extern "system" {
    pub fn cublasLt_for_cublas_ZZZ() -> *mut ::core::ffi::c_void;
}
